--- a/LiveFlight-Connect/App.xaml
+++ b/LiveFlight-Connect/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="IFCTestApp.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+<Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+             x:Class="LiveFlight.App">
+    <Application.Styles>
+        <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml" />
+        <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml" />
+    </Application.Styles>
 </Application>
